@@ -35,3 +35,34 @@ func TestPodContainerStatus_GetContainerID(t *testing.T) {
 		assert.Equal(t, test.status.GetContainerID(), test.result)
 	}
 }
+
+func TestPodContainerStatus_GetContainerIDWithRuntime(t *testing.T) {
+	tests := []struct {
+		status *PodContainerStatus
+		result string
+	}{
+		// Check to see if x://y is parsed to return x as the runtime
+		{
+			status: &PodContainerStatus{
+				Name:        "foobar",
+				ContainerID: "docker://abc",
+				Image:       "foobar:latest",
+			},
+			result: "docker",
+		},
+		// Check to see if x://y is not the format then "" is returned
+		{
+			status: &PodContainerStatus{
+				Name:        "foobar",
+				ContainerID: "abc",
+				Image:       "foobar:latest",
+			},
+			result: "",
+		},
+	}
+
+	for _, test := range tests {
+		_, runtime := test.status.GetContainerIDWithRuntime()
+		assert.Equal(t, runtime, test.result)
+	}
+}
